# allbrain-mcp

./: .allbrain.db  .allbrain.db-shm  .allbrain.db-wal  .allbrain.db.bak.20260630-121409  .bumpversion.cfg  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUMMARY.md  bandit_report.json  glama.json  pyproject.toml  ruff_errors.txt  ruff_errors_utf8.txt
.codex/: config.toml
.cursor/: mcp.json
.gemini/: settings.json
.github/workflows/: ci.yml  publish.yml  stress.yml
.kiro/settings/: mcp.json
.opencode/: opencode.json
benchmarks/: bench_write_throughput.py
docs/: ARCHITECTURE.md  benchmark-report.md  code-quality-audit.md  community-examples.md  custom-agent-integration.md  data-lifecycle.md  database_scaling_policy.md  documentation_review.md  domain_boundaries.md  functional_verification.md  index.md  package-maturity.md  performance_benchmarks.md  pre-release-report.md  release_checklist_v1.0.md  repository_context_aware_api.md  roadmap.md  rollback-plan.md  security_audit.md  setup.md  sprint22_organization_layer_architecture.md  sprint31_autonomous_governance_alignment_architecture.md  sprint34_counterfactual_reasoning.md  sprint35_scenario_planning.md  sprint36_strategic_foresight.md  sprint37_meta_reasoning.md  sprint38_uncertainty_epistemic_reasoning.md  sprint41_2_projection_ordering.md  sprint44_belief_revision.md  sprint47_calibration_drift.md  sprint49_arbitration.md  sprint52_capabilities.md  sprint53_capability_learning.md  sprint56_fusion.md  sprint57_drift.md  sprint60_attention.md  sprint61_workspace.md  sprint62_episodic.md  sprint63_semantic.md  sprint64_failure_memory.md  (+9 more)
docs/adr/: 001-domains-namespace.md  002-shim-pattern.md  003-coupling-ranking-migration-order.md  004-foundations-as-infrastructure.md  005-threading-event-wait.md  006-redaction-key-denylist.md
docs/sprint9/: architecture.md
docs/sprints/: README.md  analysis_meta_optimizer_edge_cases.md  sprint13_reliability_architecture.md  sprint14_distributed_resilience_architecture.md  sprint15_collaboration_architecture.md  sprint16_organizational_learning_architecture.md  sprint21_policy_engine_architecture.md  sprint23_self_evolution_architecture.md  sprint25_resource_management_architecture.md  sprint27_economic_layer_architecture.md  sprint28_execution_intelligence_architecture.md  sprint29_decision_arbitration_self_reflection_architecture.md  sprint30_meta_optimization_architecture.md  sprint32_system_integration_runtime_core_architecture.md  sprint33_world_model.md  sprint39_information_seeking.md  sprint41_1_hotfix.md  sprint41_foundations_hardening.md  sprint43_contradiction_event_sourcing.md  sprint45_uncertainty_integration.md  sprint46_evidence_trust_layer.md  sprint48_reputation.md  sprint50_telemetry.md  sprint51_routing.md  sprint54_dynamics.md  sprint55_attribution.md  sprint58_meta_policy.md  sprint59_signal_rewards.md  sprint68_predictive_failure.md  sprint72_sdk_resources_prompts_client.md  sprint73_mcp_datetime_coercion.md  sprint74_list_events_pagination.md  sprint75_sdk_typed_methods_inventory.md
examples/: antigravity.mcp.json  claude.mcp.json  codex.mcp.toml  opencode.json  python_custom_agent.py  two_agent_sqlite_pilot.py
scripts/: analyze_events.py  audit_dependencies.py  benchmark_performance.py  check_architecture.py  check_complexity.py  check_docstrings.py  check_maturity.py  check_readme_commands.py  complexity_baseline.json  health_check.py  install-mcp.ps1  install-mcp.sh  install_mcp_clients.py  mcp_stress_report.json  mcp_stress_test.py  simulate_weight_dynamics.py  smoke_client.py  stress_report.json  stress_test.py  update_readme_test_count.py  verify_functional_requirements.py  verify_threshold_fix.py
src/allbrain/: __init__.py  _compat.py  config.py  counterfactual.py  decision.py  foresight.py  information_seeking.py  intent.py  meta_reasoning.py  objective_system.py  profiling.py  scenarios.py  tradeoff_engine.py  uncertainty.py
tests/: _helpers.py  conftest.py  test_activation.py  test_adaptive_recovery_integration.py  test_adaptive_recovery_manager.py  test_adaptive_recovery_reducer.py  test_adaptive_recovery_strategy_chain.py  test_adaptive_recovery_switch_policy.py  test_agent_metrics.py  test_agent_profile_scheduler.py  test_agents.py  test_analysis_managers_deep.py  test_arbitration.py  test_arbitration_quality_gate.py  test_arbitration_reducer.py  test_arbitration_replay.py  test_architecture_contracts.py  test_attention.py  test_attention_replay.py  test_attribution.py  test_attribution_replay.py  test_belief_convergence.py  test_belief_updater.py  test_budget.py  test_calibration.py  test_calibration_quality_gate.py  test_calibration_reducer.py  test_capabilities.py  test_capability_quality_gate.py  test_capability_reducer.py  test_capability_replay.py  test_causal.py  test_causal_estimator.py  test_causal_graph.py  test_causal_replay.py  test_cli.py  test_cli_doctor_inventory.py  test_coevolution_engine.py  test_concurrent.py  test_concurrent_queue.py  (+241 more)
tests/chaos/: test_cluster_resilience.py  test_distributed_metrics_snapshot.py  test_distributed_queues.py
tests/collaboration/: test_delegation_team.py  test_integration.py  test_negotiation_consensus.py  test_supervisor.py
tests/evolution/: test_evolution.py
tests/governance/: test_governance.py
tests/install/: test_mcp_json_install.py
tests/integration/: __init__.py  test_distributed_brokers.py  test_postgres_storage.py
tests/memory/: test_memory_domain_items.py  test_memory_helpers.py
tests/predictive_failure/: test_coevolution.py
tests/reducers/: conftest.py  test_deep_gov_world.py  test_deep_recovery_core.py  test_reducer_facade_identity.py  test_reducers_core.py  test_reducers_governance.py  test_reducers_learning.py  test_reducers_policy.py  test_reducers_predictive_failure.py  test_reducers_recovery.py  test_reducers_world.py
tests/reliability/: test_idempotency.py  test_lease_manager.py  test_lifecycle.py  test_reliability_metrics.py  test_sqlite_queue.py  (+2 more)
(+1149 files in other folders)
