[project]
name = "allbrain-mcp"
version = "0.1.0"
description = "One Brain. Multiple Agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2,<4.0",
    "GitPython>=3.1.0,<4.0",
    "psutil>=5.9.0,<6.0",
    "pydantic>=2.10,<3.0",
    "rich>=13.0.0,<14.0",
    "sqlalchemy>=2.0,<3.0",
    "sqlmodel>=0.0.22,<0.1",
    "typer>=0.12.0,<1.0",
    "uuid6>=2024.7.10,<2025.0",
]

[project.optional-dependencies]
distributed = [
    "redis>=5.0.0,<6.0",
    "aio-pika>=9.0.0,<10.0",
]
dev = [
    "bandit>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.0",
]

[project.scripts]
allbrain = "allbrain.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allbrain"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto --dist=worksteal"

[tool.coverage.run]
source = ["allbrain"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "SIM"]

[tool.bandit]
skips = ["B311"]

