[project]
name = "allbrain-agent-runtime"
version = "0.2.6"
description = "Event-sourced memory and orchestration server for multi-agent AI systems"
authors = [{ name = "Mustafa Ali Ertuğrul", email = "mustafali1230@hotmail.com" }]
keywords = ["mcp", "agent", "multi-agent", "orchestration", "memory", "event-sourcing", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0,<2.0",
    "fastmcp>=3.4.2,<3.5",
    "GitPython>=3.1.0,<4.0",
    "orjson>=3.10,<4.0",
    "psutil>=5.9.0,<6.0",
    "pydantic>=2.10,<3.0",
    "rich>=13.0.0,<14.0",
    "sqlalchemy>=2.0,<3.0",
    "sqlmodel>=0.0.22,<0.1",
    "typer>=0.12.0,<1.0",
    "uuid6>=2024.7.10,<2025.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0,<4.0",
]
distributed = [
    "redis>=5.0.0,<6.0",
    "aio-pika>=9.0.0,<10.0",
]
[project.scripts]
allbrain = "allbrain.cli.main:app"
allbrain-mcp = "allbrain.cli.main:app"
allbrain-agent-runtime = "allbrain.cli.main:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/allbrain-sdk"]

[tool.uv.sources]
allbrain-sdk = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/uv.lock",
  "/docs",
  "/examples",
  "/packages/allbrain-sdk/src",
]
exclude = [
  "/.opencode",
  "/.kilo",
  "/.kimi-code",
  "/.mimocode",
  "/.zcode",
  "/.venv",
  "/.git",
  "/dist",
  "/tests",
  "/analysis",
  "/benchmarks",
  "/scripts",
  "*.db",
  "*.bak",
  "node_modules",
]

[tool.hatch.build.targets.wheel]
packages = ["src/allbrain"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
# Parallelism is opt-in: CI passes -n auto. Local `pytest` works without xdist.
# addopts left empty so a bare pytest install does not fail on unknown -n.

[tool.coverage.run]
source = ["allbrain"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "SIM", "N806"]
"__init__.py" = ["F401"]

[tool.pyright]
include = [
    "src/allbrain/models",
    "src/allbrain/security",
    "src/allbrain/server/tools/decorators.py",
    "src/allbrain/server/resources.py",
    "src/allbrain/server/prompts.py",
    "src/allbrain/ops/inventory.py",
    "packages/allbrain-sdk/src",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.bandit]
skips = ["B311"]

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "bandit>=1.8.0",
    "bump-my-version>=1.4.1",
    "pip-audit>=2.7.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pyright>=1.1.390",
    "ruff>=0.15.20",
    "allbrain-sdk",
]

[tool.bumpversion]
current_version = "0.2.3"
allow_dirty = false
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/allbrain/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
